<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sheet"
    android:orientation="vertical"
    android:paddingStart="@dimen/_20sdp"
    android:paddingTop="@dimen/_12sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingBottom="@dimen/_28sdp">

    <View
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_handle" />

    <TextView
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/edit_playlist_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:orientation="horizontal">

        <TextView
            style="@style/Text.BodyStrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_playlist_name"
            android:textSize="@dimen/_14sdp" />

        <TextView
            style="@style/Text.BodyStrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="*"
            android:textColor="@color/color_error"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fieldName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginTop="@dimen/spacing_sm"
        android:addStatesFromChildren="true"
        android:background="@drawable/bg_input_deep">

        <EditText
            android:id="@+id/etName"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvNameError"
        style="@style/Text.Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/err_name_required"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            style="@style/Button.Secondary"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="@dimen/_54sdp"
            android:layout_weight="1"
            android:minHeight="@dimen/_54sdp"
            android:text="@string/action_cancel" />

        <TextView
            android:id="@+id/btnSave"
            style="@style/Button.Primary"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="@dimen/_54sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1.4"
            android:minHeight="@dimen/_54sdp"
            android:text="@string/action_save_changes" />
    </LinearLayout>
</LinearLayout>
