<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sheet"
    android:orientation="vertical"
    android:paddingStart="@dimen/_20sdp"
    android:paddingTop="@dimen/_12sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingBottom="@dimen/_28sdp">

    <View
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/bg_handle" />

    <TextView
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheet_add_title" />

    <LinearLayout
        android:id="@+id/optionPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:background="@drawable/bg_option_row"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_14sdp">

        <ImageView
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:background="@drawable/bg_gradient_16"
            android:importantForAccessibility="no"
            android:padding="@dimen/_11sdp"
            android:src="@drawable/ic_playlist_add"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sheet_add_playlist"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/plus_jakarta_sans_semibold" />

            <TextView
                style="@style/Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/sheet_add_playlist_desc" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_chevron_right"
            app:tint="@color/color_text_tertiary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:background="@drawable/bg_option_row"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_14sdp">

        <ImageView
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:background="@drawable/bg_tile_high_16"
            android:importantForAccessibility="no"
            android:padding="@dimen/_11sdp"
            android:src="@drawable/ic_add_to_queue"
            app:tint="@color/color_accent_light" />

        <LinearLayout
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sheet_add_channel"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/plus_jakarta_sans_semibold" />

            <TextView
                style="@style/Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/sheet_add_channel_desc" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_chevron_right"
            app:tint="@color/color_text_tertiary" />
    </LinearLayout>
</LinearLayout>
